src/main/metadata/objects/Case_Comment__c.object
<CustomObject>
    <fields>
        <fullName>Attachment__c</fullName>
        <label>Attachment</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Comments</relationshipLabel>
        <relationshipName>case_comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Response_Date__c</fullName>
        <defaultValue>if( $Profile.Name =="IntegrationAPI",Now(),null)</defaultValue>
        <label>Customer Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <defaultValue>'CCC'</defaultValue>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>CR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <formula>Case__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <label>Case Comment</label>
    <nameField>
        <displayFormat>CC-{00000}</displayFormat>
        <label>Case Comment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>